@startuml "Class Diagram"

class User <<Entitiy>> {
    + username: String
    + transactions: []
    + trades: []
    -- encrypted --
    + password: 
    -- methods --
    + addPrivApi(exchangeName, privApi, secretKey)
    + printTxHistory()
    + printTradeHistory()
}

class Exchange {
    + name: String
    -- encrypted --
    + privApi: String
    + secretKey: String

    -- arrays --
    + markets: []
    + currencies: [] 

    -- methods --
    + getDepositAddress(currency): String
    + deposit(currency, destiationAddress, amount):
    + fetchMarkets(): []
    + fetchBalance(): Float
}

class Trade {
    + pair: String 

    -- methods --
    + getAvailableExchanges(): [ ]
    
    -- methods --
    + limitBuyOrder(exchangeName, pair, price):
    + limitSellOrder(exchangeName, pair, price):
    + marketBuyOrder(exchangeName, pair):
    + marketSellOrder(exchangeName, pair):
    + cancelOrder(exchangeName, pair, orderId):
    + getMyOrders(exchangeName):
    + getBidsAsks(exchangeName, pair):
    + getTradingFee(exchangeName, pair):
}

class Transaction {
    + timestamp:
    + datetime: Date
    + sourceExchange: String
    + destinationExchange: String
    + sourceWallet: String
    + destinationWallet: String
    + currency: Currency
    + amount: Float
    + transactionFee: Float
    + status: 
    + fee: Float
}

class Currency {
    code: String
    name: String
    fee: Float
}

User "1" *-- "m" Transaction
User "n" o-- "m" Exchange
Trade "n" --> "m" Currency
Transaction "n" --> "1" Currency
Exchange "m" -- "n" Trade
Exchange "1" -- "m" Transaction
Exchange "n" o-- "m" Currency

@enduml